fixed vertical align of buttons

--- a/src/assets/less/weed/buttons.less
+++ b/src/assets/less/weed/buttons.less
@@ -170,7 +170,7 @@ button.button{
   padding: 0 @button-horizontal-padding;
   text-transform: @button-text-transform;
   transition: @fast;
-  vertical-align: baseline;
+  vertical-align: middle;
   white-space: nowrap;
 
   &.no-paddings{
